Adapted pipeline using var for subscription

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,7 @@ resources:
 - repo: self
 
 pool:
+  azureSubscription: 'netcoreconfbcn2020-001'
   vmImage: 'ubuntu-latest'
 
 stages:
@@ -23,7 +24,7 @@ stages:
     - task: AzureCLI@2
       displayName: Create VNet, SubsNet and NSG
       inputs:
-        azureSubscription: 'Visual Studio Premium con MSDN (64a1a7cd-b532-4817-87c7-3a27c7ae9e1a)'
+        azureSubscription: '$(azureSubscription)'
         scriptType: 'bash'
         scriptLocation: 'scriptPath'
         scriptPath: 'create-vnet.sh'
@@ -31,7 +32,7 @@ stages:
     - task: AzureCLI@2
       displayName: Create Storage Account
       inputs:
-        azureSubscription: 'Visual Studio Premium con MSDN (64a1a7cd-b532-4817-87c7-3a27c7ae9e1a)'
+        azureSubscription: $(azureSubscription)'
         scriptType: 'bash'
         scriptLocation: 'scriptPath'
         scriptPath: 'create-storage.sh'
