Changed Azure Subscription Name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ resources:
 - repo: self
 
 variables:
-  azureSubscription: 'netcoreconf2020'
+  azureSubscription: 'Personal'
 
 pool:  
   vmImage: 'ubuntu-latest'
